--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
   "devDependencies": {
+    "@snowpack/plugin-react-refresh": "^2.4.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "snowpack": "^3.0.1"
   }
 }
