--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "react": "^17.0.1",
+    "react-cosmos": "^5.6.0-alpha.6",
     "react-dom": "^17.0.1",
     "snowpack": "^3.0.1"
   }
